public/css/styles.css
:root {
    --primary: #d7ccbf;
    --secondary: rgb(179, 220, 175);
    --tertiary: #634c4f;
    --quaternary: #ad9b85;
  }
  body {
    background-color: var(--primary);
  }

main {
display: block;
}


/* welcome button */
#welcome {
  font-family:Arial, Helvetica, sans-serif;
  border-radius: 15px 15px 15px 15px;
  background: var(--primary);
  color: var(--tertiary);
  padding: 20px;
  width: 200px;
  height: 150px;
}
/* welcome btn hover */
#welcome:hover {
  text-decoration: none;
  font-weight: bold;
  background-color: #e3d2be;
  transition: 0.5s;
  box-shadow: 0 1px 10px var(--tertiary);
}

header {
display: flex;
flex-wrap: wrap;
justify-content: space-between;
align-items: center;
padding: 20px;
padding-top: 0px;
font-size: 20px;
}

h1 {
font-size: 2em;
margin: 0.67em 0;
}

h2 {
  margin: 40px 0px 0px 0px;
  font-size: 35px;
  text-decoration: underline;
}

h2,
.label-group {
  color: var(--tertiary);
}

h4 {
  font-size: 30px;
}

.ingredient-name {
  margin: 8px;
}

/* #background-font {
  align-items: center;
  background-color: var(--tertiary);
  border-radius: 15px 15px 15px 15px;
  padding: 10px;
  margin: 5px;
  color: var(--primary);
  /* width: 200px;
  height: 150px; */
/* } */ 


.number-input {
  width: 10%;
  padding: 12px 20px;
  margin: 8px ;
  box-sizing: border-box;
  border: 2px solid var(--tertiary);
  border-radius: 4px;
}


#RLname {
  color: var(--primary);
}

.form-input {
width: 100%;
padding: 12px 20px;
margin: 8px 0;
box-sizing: border-box;
border: 2px solid var(--tertiary);
border-radius: 4px;
}

.recipe-input {
  padding: 12px 20px;
  margin: 8px 0;
  box-sizing: border-box;
  border: 2px solid var(--tertiary);
  border-radius: 4px;
} 

/* .recipe-input {
  display: block;
  width: 100%;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #495057;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid #ced4da;
  border-radius: 0.25rem;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  margin-bottom: 10px;
} */



#background-font {
  align-items: center;
  background-color: var(--tertiary);
  border-radius: 15px;
  padding: 12px 20px;
  margin: auto;
  color: var(--primary);
}

#recipe-list-container {
  align-items: center;
  padding: 12px 20px;
  margin: 15px;
  background-color: var(--tertiary);
  color: var(--primary);
  border-radius: 4px;
}

#recipe-steps {
  width: 80%;
}

#add-ingredient {
  margin-bottom: 2%;
  margin-top: 1%;
}

#add-step {
  margin-bottom: 2%;
  margin-top: 1%;
}

.btn {
background-color: var(--primary);
border: 2px solid var(--tertiary);
border-radius: 4px;
color: var(--tertiary);
padding: 8px 15px;
text-align: center;
text-decoration: none;
display: inline-block;
font-size: 14px;
}


.no-button {
  background-color: var(--primary); 
  border: none;
  border-radius: 5px 5px 5px 5px;
  color: var(--tertiary);

  padding: 8px 15px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
}

.no-button:hover {
font-weight: bold;
text-decoration: underline;
}

.btn-danger:hover {
  background-color: var(--tertiary);
  color: var(--primary);
  border-color: var(--quaternary);

}

.profile {
  background-color: var(--primary); 
  border: none;
  border-radius: 5px 5px 5px 5px;
  color: var(--tertiary);
  padding: 8px 15px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
}

.profile:hover {
font-weight: bold;
text-decoration: underline;
color:var(--tertiary);
}

.login {
  border-radius: 5px 5px 5px 5px;
  background-color: var(--primary);
  border: none;
  color: var(--tertiary);
  text-align: center;
  font-size: 20px;
  padding: 10px;
  width: 200px;
  transition: all 0.5s;
  cursor: pointer;
  margin: 5px;
}

.login span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

.login span:after {
  content: '\00bb';
  position: absolute;
  opacity: 0;
  top: 0;
  right: -20px;
  transition: 0.5s;
}

.login:hover span {
  padding-right: 25px;
}

.login:hover span:after {
  opacity: 1;
  right: 0;
}
/* login page */
.form-group label {
  display: block;
  margin-bottom: 5px;
}

/* .user-name {
  margin: auto;
  width: 50%;
  text-align: center;

} */


/* .recipe-list {
  display: flex;
  flex-direction: column;
  max-width: 25%;
} */

/* makes list wider */
.recipe-list {
  background-color: rgb(255, 255, 255);
  opacity: 85%;
  /* border: 2px solid black; */
  border-radius: 10px;
  margin-left: 10px;
  padding: 10px;
  min-width: 50%;
}

/* .d-flex.flex-column.justify-content-center.align-items-center.align-items-md-start {
  /* background-color: var(--tertiary); */
  /* border-radius: 10px;
  margin: 10px; */
  /* opacity: 85%; */
/* } */ 

@media (max-width: 805px) {
  header {
    justify-content: center;
  }
  
  h1 {
    padding: 3px;
    font-size: 1.5rem;
    line-height: 1.2;
  }
  .recipe-list {
    margin-left: 0px;
  }
  .d-flex.flex-column.justify-content-center.align-items-center.align-items-md-start {
    justify-content: center;
  }
}

